--- a/Linux/14. 常用命令.md
+++ b/Linux/14. 常用命令.md
@@ -33,7 +33,12 @@ tar
 	-v	解压缩过程信息打印
 解压命令：tar  -zvxf  xxxx.tar.gz
 
-压缩命令：tar -zcf 压缩包命名 压缩目标
+压缩命令：tar -zcvf 压缩包命名 压缩目标
+
+多线程压缩 tar --use-compress-program=pigz -zcf 压缩包命名 压缩目标
+
+tar -cvf - Data | pigz -9 -p 8 > Data.tar.gz
+-9 是指压缩率。 绝对值越大，文件越小
 ```
 
 
