--- a/Python/50. 构建工具.md
+++ b/Python/50. 构建工具.md
@@ -77,7 +77,12 @@ C:.
 python setup.py build            #编译
 python setup.py install          #安装
 python setup.py sdist            #制作分发包
+pip install twine                #发布工具
+twine upload dist/*              #发布
+python setup.py sdist upload.    #更新
 ```
+
+
 
 
 
