--- a/Python/24. 时间模块.md
+++ b/Python/24. 时间模块.md
@@ -9,7 +9,7 @@ print(datetime.now().strftime('%Y-%m-%d %H:%M:%S'))
 
 
 # 把字符串对象转换为时间对象
-print(datetime.strptime('2018/12/02',"%Y/%m/%d"))
+print(datetime.strptime('2018/12/02',"s"))
 ```
 
 ##### datetime 模块
