--- a/Python/34. pip 使用.md
+++ b/Python/34. pip 使用.md
@@ -8,7 +8,7 @@
 
 ```
 [global]
-index-url = http://mirrors.aliyun.com/pypi/simple/
+index-url = https://mirrors.aliyun.com/pypi/simple/
 [install]
 trusted-host=mirrors.aliyun.com
 ```
