--- a/gRPC/1. gRPC.md
+++ b/gRPC/1. gRPC.md
@@ -10,26 +10,20 @@
 
 ```protobuf
 syntax = "proto3";
-// 这里定义的是消息，其实就是后面函数的参数。
-message HelloRequest{
-	string name = 1;
+// string 是消息类型， id 是消息字段名称，后面的数字是消息数字标识。一个消息内数字标识是唯一的。
+message Request{
+  string id = 1;
 }
 
-message HelloReply{
-	string message =1;
+message Response{
+  int32 random = 1;
 }
 
-// 这里定义的是服务，其实就是定义类，里面的是函数，SayHello 是函数名称，里面的是参数。
-// 后面需要在 Python 中重写这些方法
-service Greeter{
-	rpc SayHello(HelloRequest) returns (HelloReply){}
-	// 可以同时定义多个函数
-	rpc Test(HelloRequest) returns (HelloReply){}
+// 服务就相当于是类
+service TestServer{
+  // 发送 id 返回 随机数
+  rpc GetRandom (Request) returns (Response){}
 }
-
-
-
-
 ```
 
 2. 使用 `protoc` 命令编译 `.proto` 文件，
@@ -43,64 +37,64 @@ python -m grpc_tools.protoc -I ./ --python_out=. --grpc_python_out=. ./hello.pro
 3. 编写客户端和服务端代码
 
 ```python
-# server.py
-import time
 import grpc
-# 这里面是序列化好的消息格式,请求和响应`
-import hello_pb2
-# 这里面是需要用到的方法
-import hello_pb2_grpc
+import time
 from concurrent import futures
+import test_pb2_grpc, test_pb2
+import random
+
+# 这里需要继承 TestServerServicer ,也就是我们在 proto 里面定义的。
+class Work(test_pb2_grpc.TestServerServicer):
+		
+    # 这里需要实现 proto 里面定义的方法
+    def GetRandom(self, request, context):
+        print(request)
+        print(request.id)
+        # Response 是自己在 proto 里面定义的消息，不是关键字。
+        return test_pb2.Response(random=random.randint(10, 20))
 
 
-# 真正的工作类，这里需要继承 
-class Word(hello_pb2_grpc.GreeterServicer):
-	# 这个方法就是之前在配置文件中定义好的 SayHello，这里需要我们自己实现.
-    def SayHello(self, request, context):
-        # 这里就是返回的数据
-        return hello_pb2.Response(results="你的任务ID")
-
-
-def grpc_server():
-    # 多进程模式下的服务
+def gRPC_server():
+    # 设置多进程模式
     server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
-    # 注册服务
-    hello_pb2_grpc.add_GreeterServicer_to_server(Word(), server)
-    # 设置 IP 端口
-    server.add_insecure_port('[::]:10000')
-    # 服务开启，因为这个是非阻塞的，所有后面要死循环，不然会退出。
+    # 注册服务函数
+    test_pb2_grpc.add_TestServerServicer_to_server(Work(), server)
+    # 设置监听地址
+    server.add_insecure_port("127.0.0.1:8888")
+    # 服务开启
     server.start()
+
     try:
         while True:
-            time.sleep(60 * 60 * 24)
+            print("It's running ...")
+            time.sleep(60)
     except KeyboardInterrupt:
         server.stop(0)
 
 
 if __name__ == "__main__":
-    grpc_server()
+    gRPC_server()
 
 ```
 
 ```python
-# client.py
 import grpc
-import hello_pb2_grpc
-import hello_pb2
+import test_pb2_grpc, test_pb2
 
 
 def run():
     # 设置服务器地址
-    channel = grpc.insecure_channel('localhost:10000')
-    stub = hello_pb2_grpc.GreeterStub(channel)
-    # 调用远程函数
-    response = stub.do_task(hello_pb2.Request(task_id='456dfddd'))
-    # results 是之前定义的字段名字
-    
-    print(response.results)
+    channel = grpc.insecure_channel("127.0.0.1:8888")
+    stub = test_pb2_grpc.TestServerStub(channel)
+
+    # 调用远程函数 GetRandom 是自己在 proto 里面定义的方法
+    response = stub.GetRandom(test_pb2.Request(id="123"))
+    print(response)
+    print(response.random)
 
 
-run()
+if __name__ == "__main__":
+    run()
 
 ```
 
