--- a/gRPC/1. gRPC.md
+++ b/gRPC/1. gRPC.md
@@ -88,7 +88,13 @@ def run():
     stub = test_pb2_grpc.TestServerStub(channel)
 
     # 调用远程函数 GetRandom 是自己在 proto 里面定义的方法
-    response = stub.GetRandom(test_pb2.Request(id="123"))
+    # 或者这样定义参数
+    # req = test_pb2.Request()
+    # req.id = "123"
+    
+    req = test_pb2.Request(id="123") 
+    response = stub.GetRandom(req)
+    
     print(response)
     print(response.random)
 
