add gRPC and C++

--- a/Python/34. pip 使用.md
+++ b/Python/34. pip 使用.md
@@ -8,7 +8,7 @@
 
 ```
 [global]
-index-url = https://mirrors.aliyun.com/pypi/simple/
+index-url = https://pypi.tuna.tsinghua.edu.cn/simple/
 [install]
 trusted-host=mirrors.aliyun.com
 ```
@@ -18,16 +18,23 @@ trusted-host=mirrors.aliyun.com
 
 ```
 [global]
-index-url = http://mirrors.aliyun.com/pypi/simple/
+index-url = https://pypi.tuna.tsinghua.edu.cn/simple/
 [install]
 trusted-host=mirrors.aliyun.com
 ```
 
 
 
-离线包安装
+内网安装
 
 ```
-https://www.lfd.uci.edu/~gohlke/pythonlibs/
+1. mkdir mylib
+2. cd mylib
+3. pip download -r requirements.txt
+
+4. 上传到服务器
+5. pip install -r requirements.txt --no-index --find-links=mylib文件夹
 ```
+
+
 
