--- a/gRPC/1. gRPC.md
+++ b/gRPC/1. gRPC.md
@@ -84,6 +84,8 @@ import test_pb2_grpc, test_pb2
 
 def run():
     # 设置服务器地址
+    # 可用设置多个地址，进行故障转移 ipv4:127.0.0.1:8888,127.0.0.1:9999
+    # channel = grpc.insecure_channel(" ipv4:127.0.0.1:8888,127.0.0.1:9999")
     channel = grpc.insecure_channel("127.0.0.1:8888")
     stub = test_pb2_grpc.TestServerStub(channel)
 
