--- a/C++/多线程编程.md
+++ b/C++/多线程编程.md
@@ -131,3 +131,126 @@ int main(int argc, char** argv) {
 }
 ```
 
+##### 条件变量 案例一
+
+```cpp
+#include <iostream>
+#include <mutex>
+#include <thread>
+#include <vector>
+#include <condition_variable>
+
+using namespace std;
+
+
+mutex myMutex;
+condition_variable cv;
+string data;
+bool ready = false;
+bool processed = false;
+
+
+void Worker() {
+    unique_lock<mutex> lock(myMutex);
+
+    // 等待主线程发送数据
+    cv.wait(lock, [] {
+        cout << "worker waiting ..." << endl;
+        return ready;
+    });
+    cout << "工作线程正在处理数据..." << endl;
+
+    // 睡眠1秒模拟处理数据
+    this_thread::sleep_for(chrono::seconds(2));
+    data = data + "已处理";
+
+    // 把数据发回主线程
+    processed = true;
+    cout << "工作线程通知数据已经处理完毕" << endl;
+
+    // 通知前,手动解锁，防止正在等待的线程被唤醒后又立刻被阻塞
+    lock.unlock();
+
+    cv.notify_one();
+}
+
+
+int main() {
+    thread worker(Worker);
+    {
+        lock_guard<mutex> lock(myMutex);
+        cout << "主线程正在准备数据" << endl;
+
+        // 睡眠1秒，模拟准备数据.
+        this_thread::sleep_for(chrono::seconds(3));
+        data = "样本数据";
+        ready = true;
+        cout << "主线程通知数据已经准备完毕" << endl;
+    }
+    cv.notify_one();
+
+    {
+        unique_lock<mutex> lock(myMutex);
+        cv.wait(lock, [] {
+            cout << "main waiting ..." << endl;
+            return processed;
+        });
+    }
+
+    cout << "回到主线程，数据 = " << data << endl;
+    worker.join();
+    return 0;
+}
+```
+
+##### 条件变量 案例二
+
+```cpp
+#include <iostream>
+#include <mutex>
+#include <thread>
+#include <queue>
+
+using namespace std;
+
+mutex myMutex;
+condition_variable cond;
+bool done = false;
+queue<int> myQueue;
+
+void produce() {
+    for (int i = 0; i <= 100; i++) {
+        unique_lock<mutex> lock(myMutex);
+        cout << "生产数据 " << i << endl;
+        myQueue.push(i);
+
+        lock.unlock();
+        cond.notify_one();
+        this_thread::sleep_for(chrono::seconds(1));
+    }
+    done = true;
+}
+
+
+void consumer() {
+    while (!done) {
+        unique_lock<mutex> lock(myMutex);
+        while (myQueue.empty()) {
+            cond.wait(lock);
+        }
+        int data = myQueue.front();
+        myQueue.pop();
+        cout << "消费数据 " << data << endl;
+        lock.unlock();
+    }
+}
+
+int main() {
+    thread t1(produce);
+    thread t2(consumer);
+
+    t1.join();
+    t2.join();
+}
+```
+
