add c-style string

--- a/gRPC/1. gRPC.md
+++ b/gRPC/1. gRPC.md
@@ -106,3 +106,46 @@ if __name__ == "__main__":
 
 ```
 
+---
+
+#### C++ 用法
+
+`hello.proto`
+
+```protobuf
+syntax = "proto3";
+
+
+package helloworld;
+
+// The greeter service definition.
+service Greeter {
+  // Sends a greeting
+  rpc SayHello (HelloRequest) returns (HelloReply) {}
+}
+
+// The request message containing the user's name.
+message HelloRequest {
+  string name = 1;
+}
+
+// The response message containing the greetings
+message HelloReply {
+  string message = 1;
+}
+```
+
+##### 编译 proto 
+
+**最好是进入最终生成的文件的所在文件夹，执行命令。否则容易出错**
+
+```sh
+# --grpc_out=. 表明生成的文件，在 hello.proto 的同一个目录
+protoc --grpc_out=. --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` hello.proto
+
+# --cpp_out=. 表明生成的文件，在 hello.proto 的同一个目录
+protoc --cpp_out=. hello.proto
+
+
+```
+
