更新了socket编程客户端以及char char* 等区别

--- a/C++/字符与字符串.md
+++ b/C++/字符与字符串.md
@@ -13,26 +13,24 @@ int main(){
 ##### c - style
 
 ```cpp
-// 相当于是字符数组，结尾有一个 '\0' 空字符
-char p[] = {'a','b','c','\0'};
-// 输出的是 abc
-std::cout << p << std::endl; 
-
-
-// 把字符数组赋值给字符指针也是可以的
-char *b = a;
-// 输出的是 abc
-std::cout << b << std::endl; 
-
-
-// 自动添加结束符号在末尾
-char c[] = "abc";
-// 输出的是 abc
-std::cout << c << std::endl; 
-
-
-// 这样是错误的，因为需要 7 个空间
-// char d[6] = "Daniel";
+int main(){
+	// 第一种写法
+  char a[] = "hello";   // 相当于   char a[] = {'h','e','l','l','o','\0'};
+  std::cout << a << std::endl;  // hello
+  std::cout << sizeof(a) << std::endl;  // 大小为 6 个字节，因为末尾会自动加上 \0
+  
+  // 第二种写法
+  char *b = "hello_b";  // "hello_b" 在编译器看来，就是首字符的内存地址，所以可以直接给 b 赋值。
+  std::cout << b << std::endl; // hello_b
+  
+  std::cout << sizeof(b) << std::endl;    // 这样计算的是内存地址的空间大小 8 个字节 
+  std::cout << sizeof(*b) << std::endl;   // 这样计算的是指针本身的空间大小，字符指针 1 个字节。
+  
+  
+  // 数组名，也是内存地址所以可以给 b = a;
+  b = a;
+  std::cout << b << std::endl; // hello
+}
 ```
 
 ##### c++ string
