--- a/C++/并发编程.md
+++ b/C++/并发编程.md
@@ -1,3 +1,70 @@
+#### fork 基本用法
+
+```c++
+#include <unistd.h>
+#include <iostream>
+
+int main(){
+  int childpid;
+  childpid = fork(); // 从这里开始，主进程和子进程同时执行下面的代码
+  
+  if (childpid==0){
+    // 这是子进程会执行的部分
+  }
+  else{
+    // 这里是主进程会执行的部分
+    // 子进程的 PID 为 childpid
+  }
+}
+```
+
+##### 处理僵尸进程
+
+当子进程停止后，主进程没有捕获 `SIGCHLD` 信号，那么子进程就成了僵尸进程，会占用系统资源。
+
+```cpp
+#include <unistd.h>
+#include <csignal>
+#include <iostream>
+
+void signalHandler(int signum) {
+  std::cout << "signum " << signum << std::endl;
+
+  int pid;
+  int stat;
+
+  pid = wait(&stat);
+  std::cout << "fork is shutdown " << pid << std::endl;
+  std::cout << "stat  " << stat << std::endl;
+  return;
+}
+
+int main() {
+  // SIGCHLD 就是当子退出的信号
+  signal(SIGCHLD, signalHandler);
+
+  int pid = fork();
+
+  if (pid == 0) {
+    for (int i = 0; i < 5; i++) {
+      sleep(1);
+      std::cout << "fork " << i << std::endl;
+    }
+    exit(0);  // 子进程的结束标志，或者用 return
+  } else {
+    for (int i = 0; i < 1000; i++) {
+      sleep(1);
+    }
+  }
+}
+```
+
+
+
+
+
+
+
 #### C++ 多线程编程
 
 ##### 互斥锁
