增加 char string 相互转换

--- a/C++/字符与字符串.md
+++ b/C++/字符与字符串.md
@@ -40,7 +40,73 @@ int main(){
 std::string a = "hello";
 // 这样初始化也可以
 std::string a("hello");
+```
+
+##### 字面值
+
+```cpp
+// 字面值的字符串实际上是 \0 结尾的字符数组
+// 下面代表的含义是相同的
+  const char* a = "hello";
+  const char b[] = "hello";
+  const char c[] = {'h', 'e', 'l', 'l', 'o', '\0'};
+
+// 这个的含义是，字符数组，但是不是字符串，因为不是 \0 结尾。但是也可以输出 hello
+  const char d[] = {'h', 'e', 'l', 'l', 'o'};
+
+	std::cout << a << std::endl; // hello
+  std::cout << b << std::endl; // hello
+  std::cout << c << std::endl; // hello
+  std::cout << d << std::endl; // hello
+
+  std::cout << sizeof(b) << std::endl;   // 6
+  std::cout << sizeof(c) << std::endl;   // 6
+  std::cout << sizeof(d) << std::endl;   // 5
+```
 
 
+
+
+
+
+
+---
+
+
+
+#### 相互转换
+
+##### char to string
+
+```cpp
+  const char* a = "hello";
+  const char b[] = "hello";
+  const char c[] = {'h', 'e', 'l', 'l', 'o'};      // 这个不是字面值字符串，但是也能转换为 string
+  const char d[] = {'h', 'e', 'l', 'l', 'o', '\0'};
+
+  std::string s1(a);
+  std::string s2(b);
+  std::string s3(c);
+  std::string s4(d);
+
+  std::cout << s1 << std::endl;  // hello
+  std::cout << s2 << std::endl;  // hello
+  std::cout << s3 << std::endl;  // hello
+  std::cout << s4 << std::endl;  // hello
+```
+
+##### string to char
+
+```cpp
+  std::string s1("hello");
+
+  char a[20];
+  strcpy(a, s1.c_str());
+  std::cout << a << std::endl;  // hello
+
+
+  const char *b;  // 这里需要定义为 const 
+  b = s1.data();  // s1.c_str() 也可以。 data() 返回不带 \0 的数组，c_str() 返回带 \0 的数组
+  std::cout << b << std::endl;  // hello
 ```
 
