更新网络编程例子

--- a/C++/网络编程.md
+++ b/C++/网络编程.md
@@ -8,51 +8,47 @@
 #include <sys/socket.h>
 #include <unistd.h>
 
+#include <csignal>
 #include <iostream>
 
 int LISTENQ = 1024;
 
-void str_echo(int sockfd) {
+void str_echo(int connfd) {
   ssize_t n;
-  char recvbuf[1024];
+  char recvbuf[5];
+
+  // 使用前归零，否则会有游离的数据
+  bzero(&recvbuf, sizeof(recvbuf));
+
+
+  std::cout << "buf length: " << sizeof(recvbuf) << std::endl;
+
   while (true) {
-    n = recv(sockfd, recvbuf, sizeof(recvbuf), 0);
-    std::cout << "recvbuf: " << n << std::endl;
+    n = recv(connfd, recvbuf, sizeof(recvbuf), 0);
+    std::cout << "length: " << n << std::endl;
     if (n == 0) {
-      std::cout << "no data" << n << std::endl;
+      std::cout << "网络中断" << std::endl;
       return;
     } else if (n < 0) {
-      std::cout << "error" << std::endl;
-    } else {
-      std::cout << recvbuf << std::endl;
-      // write(sockfd, recvbuf, n);
+      std::cout << "发生错误" << std::endl;
+    } else{
+      std::cout << "------start------" << std::endl;
+      std::cout << recvbuf;
+      std::cout << "------end------" << std::endl;
+      // 每次接受完最好是 归零，否则会有游离的数据
+      bzero(&recvbuf, sizeof(recvbuf));
     }
   }
 }
 
-// void str_echo(int sockfd) {
-//   ssize_t n;
-//   char buf[MAXLINE];
-
-// again:
-//   while ((n = read(sockfd, buf, MAXLINE)) > 0) {
-//     write(sockfd, buf, n);
-//   }
-//   if (n < 0 && errno == EINTR)
-//     goto again;
-//   else if (n < 0)
-//     std::cout << "str_echo: read error" << std::endl;
-// }
-
-// int main() {
-//   for (int i=0;i<2;i++){
-//     int id = fork();
-//     std::cout << id << "-" << std::endl;
-//   }
-//   sleep(10000);
-// }
+void signalHandler(int signum) {
+  std::cout << "signum: " << signum << std::endl;
+  exit(signum);
+}
 
 int main() {
+  signal(SIGINT, signalHandler);
+
   int socketfd, connfd;
   int childpid;
   unsigned int clilen;
@@ -108,6 +104,7 @@ int main() {
               << std::endl;
     // 创建一个子进程，从这里开始，从这里开始子进程和主进程同时执行下面的代码。fork
     // 会返回两次，返回给子进程的是 0 ，返回给主进程的是子进程的 PID
+    // fork 会复制一份和主进程完全相同的数据，所以子进程也有 socketfd 和 connfd
     childpid = fork();
     if (childpid == 0) {
       // 这里是关闭子进程的 监听 socket
@@ -145,18 +142,15 @@ void signalHandler(int signum) {
 void str_cli(FILE *fp, int sockfd) {
   char sendbuf[MAXLINE], recvbuf[MAXLINE];
 
-  while (fgets(sendbuf, MAXLINE, fp) != NULL) {
-    write(sockfd, sendbuf, strlen(sendbuf));
-
-    if (read(sockfd, recvbuf, MAXLINE) == 0)
-      std::cout << "str_cli: server terminated prematurely" << std::endl;
-
-    fputs(recvbuf, stdout);
+  while (true) {
+    char *txt = fgets(sendbuf, MAXLINE, fp);
+    if (txt !=NULL) {
+      write(sockfd, sendbuf, strlen(sendbuf));
+    }
   }
 }
 
 int main(int argc, char **argv) {
-
   const char *host = "127.0.0.1";
 
   signal(SIGINT, signalHandler);
