--- a/C++/网络编程.md
+++ b/C++/网络编程.md
@@ -107,8 +107,8 @@ int main() {
     // fork 会复制一份和主进程完全相同的数据，所以子进程也有 socketfd 和 connfd
     childpid = fork();
     if (childpid == 0) {
-      // 这里是关闭子进程的 监听 socket
-      // 副本，否则会出现多个子进程和主进程都在监听。实际上只需要主进程监听。
+      // 这里是关闭子进程的 监听 socket 副本，
+      // 否则会出现多个子进程和主进程都在监听。实际上只需要主进程监听。
       close(socketfd);
       str_echo(connfd);
       // 这里是给子进程的结束信号或者用 return ，用以通知主进程。
