--- a/Linux/15. SSH 操作.md
+++ b/Linux/15. SSH 操作.md
@@ -19,3 +19,16 @@ ssh-keygen   # 生成的公钥和密钥存放在 ~/.ssh/ 目录下
 ssh-copy-id -i .ssh/id_rsa.pub root@192.168.186.104
 ```
 
+
+
+
+
+##### 端口转发
+
+把远程端口转发到本地
+
+```sh
+# 就是把 mageia.cn 上的 172.10.3.3 接口上的 22 映射到电脑本地的 3333 端口
+ssh root@mageia.cn -L 0.0.0.0:3333:172.10.3.3:22
+```
+
