--- a/Rust/多线程.md
+++ b/Rust/多线程.md
@@ -90,3 +90,54 @@ fn main() {
 
 ```
 
+##### 多个生产者
+
+```rust
+#![allow(warnings, unused)]
+
+
+use std::thread;
+use std::time::Duration;
+use std::sync::mpsc;
+
+fn main() {
+    let (tx, rx) = mpsc::channel();
+
+    let tx1 = mpsc::Sender::clone(&tx);
+
+    thread::spawn(move || {
+        let val = vec![
+            String::from("hi"),
+            String::from("from"),
+            String::from("the"),
+            String::from("thread"),
+        ];
+
+        for item in val {
+            tx1.send(item).unwrap();
+            thread::sleep(Duration::from_secs(1));
+        }
+    });
+
+
+    thread::spawn(move || {
+        let val = vec![
+            String::from("more"),
+            String::from("messages"),
+            String::from("for"),
+            String::from("you"),
+        ];
+
+        for item in val {
+            tx.send(item).unwrap();
+            thread::sleep(Duration::from_secs(1));
+        }
+    });
+
+
+    for received in rx {
+        println!("Got: {}", received);
+    }
+}
+```
+
