--- a/Python/37. 装饰器.md
+++ b/Python/37. 装饰器.md
@@ -1,49 +1,119 @@
-#### 自定义 装饰器
+#### 需要手动调用原函数情况
+
+##### 不带参数的装饰器
 
 ```python
 import time
-def timer(func):                 # 倒数第二层，永远是传递 func
-    def inner(*args, **kwargs):  # 装饰后的方法
+
+# func 嵌套的就是 func 本身的参数 *args **kwargs
+def timer(func):
+    def wrapper(*args, **kwargs):
         start = time.time()
         res = func(*args, **kwargs)
         end = time.time()
         print(end - start)
+        
         return res
-    return inner
 
-@timer   # 相当于 test = timer(test)
-def test(n):
-    for x in range(n):
-        print(x)
+    return wrapper
+
+
+@timer
+def work(a, b):
+    print(a, b)
+
+
+if __name__ == '__main__':
+    work(1, 2)
+
 ```
 
-#### 带参数的装饰器
-
-在外面再嵌套了一层函数。
+##### 带参数的装饰器
 
 ```python
-def timer(data):
-    def out(func):    # 倒数第二层，永远是传递 func
-        def inner(): # 装饰后的方法 
-            import time
-            start = time.clock()
-            func()
-            end = time.clock()
+import time
+
+
+# func 嵌套的就是 func 本身的参数 *args **kwargs
+def timer(name, ):
+    def wrapper(func):
+        def inner(*args, **kwargs):
+            start = time.time()
+            res = func(*args, **kwargs)
+            end = time.time()
             print(end - start)
-            print(data)
-
+            return res
         return inner
+    return wrapper
+  
+  
+ 
+# 用类来实现
+class Timer(object):
 
-    return out
+    def __init__(self, name):
+        self.name = name
+
+    def __call__(self, func):
+        def wrapper(*args, **kwargs):
+            start = time.time()
+            res = func(*args, **kwargs)
+            end = time.time()
+            print(end - start)
+
+            return res
+
+        return wrapper
 
 
-@timer(data="test")    # 相当于 test = timer(data)(test)
+
+@timer(name="stefan")
+def test(a, b):
+    print(a, b)
+
+
+if __name__ == '__main__':
+    test(1, 2)
+
+```
+
+---
+
+
+
+#### 不需要手动调用原函数情况
+
+比如 Web 框架的视图函数，就不需要主动调用原函数。
+
+```python
+class Router(object):
+
+    def __init__(self):
+        self.path_info = dict()
+
+    def __call__(self, path):
+        print("path", path)
+
+        def wrapper(func, ):
+            res = func()
+
+            # 这里可以把 res 通过网络发给客户端
+            print("do something ")
+            print(res)
+
+        return wrapper
+
+
+route = Router()
+
+
+@route("/hello")
 def test():
-    for item in range(100000):
-        pass
+    print("test")
 
 
-test()
+if __name__ == '__main__':
+    pass
 
 ```
 
