--- a/gRPC/1. gRPC.md
+++ b/gRPC/1. gRPC.md
@@ -6,23 +6,26 @@
 
 ##### 使用步骤
 
-1. 编写 `.proto `配置文件
+1. 编写 `hello.proto `配置文件
 
 ```protobuf
+syntax = "proto3";
 
-// string 是消息类型， id 是消息字段名称，后面的数字是消息数字标识。一个消息内数字标识是唯一的。
-message Request{
-  string id = 1;
+
+// The greeting service definition.
+service Greeter {
+  // Sends a greeting
+  rpc SayHello (HelloRequest) returns (HelloReply) {}
 }
 
-message Response{
-  int32 random = 1;
+// The request message containing the user's name.
+message HelloRequest {
+  string name = 1;
 }
 
-// 服务就相当于是类
-service TestServer{
-  // 发送 id 返回 随机数
-  rpc GetRandom (Request) returns (Response){}
+// The response message containing the greetings
+message HelloReply {
+  string message = 1;
 }
 ```
 
@@ -40,27 +43,23 @@ python -m grpc_tools.protoc -I ./ --python_out=. --grpc_python_out=. ./hello.pro
 import grpc
 import time
 from concurrent import futures
-import test_pb2_grpc, test_pb2
+import hello_pb2, hello_pb2_grpc
 import random
 
 # 这里需要继承 TestServerServicer ,也就是我们在 proto 里面定义的。
-class Work(test_pb2_grpc.TestServerServicer):
-		
-    # 这里需要实现 proto 里面定义的方法
-    def GetRandom(self, request, context):
-        print(request)
-        print(request.id)
-        # Response 是自己在 proto 里面定义的消息，不是关键字。
-        return test_pb2.Response(random=random.randint(10, 20))
+class Greeter(hello_pb2_grpc.GreeterServicer):
+
+    def SayHello(self, request, context):
+        return hello_pb2.HelloReply(message='Hello, %s!' % request.name)
 
 
 def gRPC_server():
-    # 设置多进程模式
+    # 设置多线程模式
     server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
     # 注册服务函数
-    test_pb2_grpc.add_TestServerServicer_to_server(Work(), server)
+    hello_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
     # 设置监听地址
-    server.add_insecure_port("127.0.0.1:8888")
+    server.add_insecure_port("172.16.39.2:50051")
     # 服务开启
     server.start()
 
@@ -76,6 +75,7 @@ if __name__ == "__main__":
     gRPC_server()
 
 ```
+
 
 ```python
 import grpc
@@ -106,7 +106,102 @@ if __name__ == "__main__":
 
 ```
 
+##### 多进程模式服务器
+
+端口复用（在 Linux 上有效，macOS 和 windows 有不同的实现，可能无效）
+
+```python
+from concurrent import futures
+import contextlib
+import datetime
+import logging
+import multiprocessing
+import time
+import socket
+import sys
+
+import grpc
+
+import hello_pb2
+import hello_pb2_grpc
+
+_LOGGER = logging.getLogger(__name__)
+
+_PROCESS_COUNT = multiprocessing.cpu_count()
+_THREAD_CONCURRENCY = _PROCESS_COUNT
+
+
+
+class Greeter(hello_pb2_grpc.GreeterServicer):
+
+    def SayHello(self, request, context):
+        return hello_pb2.HelloReply(message='Hello, %s!' % request.name)
+
+
+
+def _run_server(bind_address):
+    """Start a server in a subprocess."""
+    _LOGGER.info('Starting new server.')
+    options = (('grpc.so_reuseport', 1),)
+
+    server = grpc.server(futures.ThreadPoolExecutor(
+        max_workers=_THREAD_CONCURRENCY,),
+                         options=options)
+
+
+    hello_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
+    server.add_insecure_port(bind_address)
+    server.start()
+    server.wait_for_termination()
+
+
+@contextlib.contextmanager
+def _reserve_port():
+    """Find and reserve a port for all subprocesses to use."""
+    sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+    sock.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEPORT, 1)
+    if sock.getsockopt(socket.SOL_SOCKET, socket.SO_REUSEPORT) == 0:
+        raise RuntimeError("Failed to set SO_REUSEPORT.")
+    sock.bind(('127.0.0.1', 50051))
+    try:
+        yield sock.getsockname()
+    finally:
+        sock.close()
+
+
+def main():
+    with _reserve_port() as addr:
+        bind_address = '{}:{}'.format(addr[0],addr[1])
+        _LOGGER.info("Binding to '%s'", bind_address)
+        sys.stdout.flush()
+        workers = []
+        for _ in range(_PROCESS_COUNT):
+            worker = multiprocessing.Process(target=_run_server,
+                                             args=(bind_address,))
+            worker.start()
+            workers.append(worker)
+        for worker in workers:
+            worker.join()
+
+
+if __name__ == '__main__':
+    handler = logging.StreamHandler(sys.stdout)
+    formatter = logging.Formatter('[PID %(process)d] %(message)s')
+    handler.setFormatter(formatter)
+    _LOGGER.addHandler(handler)
+    _LOGGER.setLevel(logging.INFO)
+    main()
+
+
+
+```
+
+
+
+
 ---
+
+
 
 #### C++ 用法
 
