--- a/Python/50. 构建工具.md
+++ b/Python/50. 构建工具.md
@@ -79,7 +79,7 @@ python setup.py install          #安装
 python setup.py sdist            #制作分发包
 pip install twine                #发布工具
 twine upload dist/*              #发布
-python setup.py sdist upload.    #更新
+python setup.py sdist upload     #更新
 ```
 
 
