--- a/Rust/MySQL 使用/基础实例.md
+++ b/Rust/MySQL 使用/基础实例.md
@@ -19,13 +19,90 @@ fn main() {
     
     let sql = "select name,duserid from user";
 		
-  	
+  	// 查询多条数据
     let res: Vec<(String, String)> = conn.query(sql).unwrap();
 
     for r in res {
         println!("{:?},{:?}", r.0, r.1);
     }
+  
+  	// 查询单条数据
+    let sql = "select name,age from user";
+    let res: Option<(String, i32)> = con.query_first(sql).unwrap();
+
+    println!("{:?}", res);
+  
+  
+  	// 查询结果返回到 结构体
+    let stmt = con.prep("select name,age from user where id = ?").unwrap();
+    let res: Vec<User> = con.exec_map(stmt, (12, ), |(name, age)| User {
+        name,
+        age,
+    }).unwrap();
 }
 
+```
+
+##### 使用事务
+
+```rust
+extern crate mysql;
+
+use mysql::*;
+use mysql::prelude::*;
+use mysql::Opts;
+
+
+fn main() {
+    let url = "mysql://username:password@localhost:3306/test";
+    let opts = Opts::from_url(url).unwrap();
+    let pool = Pool::new(opts).unwrap();
+
+    let mut con = pool.get_conn().unwrap();
+
+    let sql = "select name,age from user";
+    let res: Vec<(String, i32)> = con.query(sql).unwrap();
+
+    for item in res {
+        println!("{:?},{:?}", item.0, item.1);
+    }
+		
+  
+  	// 手动开启事务
+    let mut tx = con.start_transaction(TxOpts::default()).unwrap();
+    tx.query_drop("delete from user").unwrap();
+  	// 提交事务
+    tx.commit().unwrap();
+}
+```
+
+##### 参数化查询
+
+```rust
+extern crate mysql;
+
+use mysql::*;
+use mysql::prelude::*;
+use mysql::Opts;
+
+
+fn main() {
+    let url = "mysql://username:password@localhost:3306/test";
+    let opts = Opts::from_url(url).unwrap();
+    let pool = Pool::new(opts).unwrap();
+
+    let mut con = pool.get_conn().unwrap();
+		
+  	// 参数化查询 使用 ?
+    let sql = "select name,age from user where id = ?";
+  	
+    let res: Vec<(String, i32)> = con.exec(sql, (12, )).unwrap();
+
+    for item in res {
+        println!("{:?},{:?}", item.0, item.1);
+    }
+  
+  	
+}
 ```
 
