--- a/Rust/MySQL 使用/基础实例.md
+++ b/Rust/MySQL 使用/基础实例.md
@@ -2,6 +2,8 @@
 
 参考文档
 
+**数据库单例模式，见全局变量**
+
 https://rustmagazine.github.io/rust_magazine_2021/chapter_3/rust-mysql.html
 
 ```rust
@@ -93,8 +95,9 @@ fn main() {
 
     let mut con = pool.get_conn().unwrap();
 		
-  	// 参数化查询 使用 ?
+  	// 参数化查询
     let sql = "select name,age from user where id = ?";
+  	let sql = "select name,age form user where id = :id"
   	
     let res: Vec<(String, i32)> = con.exec(sql, (12, )).unwrap();
 
