--- a/Docker/基本入门.md
+++ b/Docker/基本入门.md
@@ -10,6 +10,10 @@ docker pull nginx
 
 ##### 运行容器
 
+```sh
+docker run -p 8000:8000 --name 自己取的别名 centos
+```
+
 ```shell
 # -d 是指后台运行
 docker run --name 自己取的别名（可有可无） -d -it centos bash
