--- a/actix-web/基础用法.md
+++ b/actix-web/基础用法.md
@@ -43,7 +43,7 @@ version = "3.3.2"
 
 
 
-##### 返回 Json
+##### 返回 Json v3 版本
 
 ```rust
 use std::time::Duration;
@@ -96,6 +96,27 @@ async fn main() -> std::io::Result<()> {
         App::new()
             .service(hello)
     }).bind(host).unwrap().run().await;
+}
+```
+
+
+
+##### 返回 Json v4 版本
+
+```rust
+use actix_web::{post, web, HttpRequest};
+use serde::Serialize;
+
+#[derive(Serialize)]
+struct Info {
+    name: String,
+}
+
+#[post("/{name}")]
+async fn index(req: HttpRequest) -> web::Json<Info> {
+    web::Json(Info {
+        name: req.match_info().get("name").unwrap().to_owned(),
+    })
 }
 ```
 
