--- a/Rust/全局变量.md
+++ b/Rust/全局变量.md
@@ -1,6 +1,6 @@
-#### 全局变量
+##### static 全局变量
 
-##### 原生 `static` 只能作用于在编译时，可以确定的值。
+原生 `static` 只能作用于在编译时，可以确定的值。
 
 ```rust
 static X: i32 = 16;
@@ -16,6 +16,7 @@ fn main() {
         println!("{}", Y);
     }
 }
+
 
 ```
 
@@ -71,40 +72,4 @@ fn main() {
 ```
 
 ---
-
-
-
-##### 使用 once_cell 实现数据库单例模式
-
-`db.rs`
-
-```rust
-extern crate mysql;
-extern crate once_cell;
-
-use mysql::{PooledConn, Opts, Pool};
-use std::sync::Mutex;
-use once_cell::sync::Lazy;
-
-
-// 静态全局变量 POOL ，后面就不会再次创建了，而是使用现有的。
-pub static POOL: Lazy<Pool> = Lazy::new(|| {
-    let url = "mysql://username:passowrd@localhost:3306/test";
-    let opts = Opts::from_url(url).unwrap();
-    // 指定连接池大小
-    let pool = Pool::new_manual(10, 20, opts).unwrap();
-    return pool;
-});
-
-```
-
-`main.rs`
-
-```rust
-mod db;
-
-fn main(){
-   let mut conn = db::POOL.get_conn().unwrap();
-}
-```
 
